--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -262,7 +262,7 @@
                          The session video recording will be linked from here.
                       <ul class="text">
                         <li><strong><a style="color:#B40431;"></a><br>
-				a</strong>
+				</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
@@ -318,6 +318,300 @@
                     </td>
 		    <hr>			    
                   </tr>
+			    
+<hr size="1">
+<a name="WED"></a>
+<h2 style="color:#B40431;">Wednesday, 8 September 2021</h2>
+<hr size="1">
+                  <tr>
+                    <td>
+		       <a name="OPENING"></a>
+			    <h3>WED 13:15-13:30 GMT+6- <a style="color:#B40431;">OPENING</a></h3>
+			       <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			         See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong>
+		               </p>
+                    </td>
+		    <hr>
+                   </tr>
+                   <tr>
+                    <td>
+		       <a name="SESSION-2"></a>
+                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): KIM LARSEN</a>
+			    (Chair: Peter Csaba Olveczky)</h3>
+			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
+                         <ul>
+                           <li><strong><a style="color:#B40431;">Model Checking and Machine Learning Joining Forces<a></strong></li>
+                         </ul>
+			 <p class="text">
+                           <a class="link"
+			      style="color:#B40431;"
+                              href="keynotes.html#KIM">Abstract and Speaker's Biography</a> |
+                           The session video recording will be linked from here.</p>
+                      </p>
+                    </td>
+                    <hr>
+                   </tr>
+                   <tr>
+                    <td>
+                       <h3>WED 14:30-15:00 GMT+6 - SHORT BREAK</h3>
+                    </td>
+		    <hr>	   
+                  </tr>               
+                 <tr>
+                    <td>
+                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 2: EFFICIENT MODEL-CHECKING METHODS<a> (Chair: TBA)</h3>
+			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+                         <a class="link"
+			    style="color:#B40431;"
+                            href=""></a>
+                         The session video recording will be linked from here.
+                      <ul class="text">
+                        <li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
+				Yati Phyo, Canh Do Minh and Kazuhiro Ogata</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+			</li>
+			<br>
+			<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
+			        Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+	                 </li>
+			<br>
+			<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
+			        Rick Erkens and Jan Friso Groote</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+	                 </li>								       										       
+                      </ul>
+                    </td>
+		    <hr>			    
+                  </tr>
+                  <tr>
+                    <td>
+                       <h3>WED 16:30-17:30 GMT+6 - LONG BREAK</h3>
+                    </td>
+		    <hr>	   
+                  </tr>               
+                  <tr>
+                    <td>
+                      <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 3: <a> (Chair: TBA)</h3>
+			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+                         <a class="link"
+			    style="color:#B40431;"
+                            href=""></a>
+                         The session video recording will be linked from here.
+                      <ul class="text">
+                        <li><strong><a style="color:#B40431;"></a><br>
+				</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+			</li>
+			<br>
+			<li><strong><a style="color:#B40431;"></a><br>
+			        </strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+	                 </li>
+                      </ul>
+                    </td>
+		    <hr>			    
+                  </tr>
+                  <tr>
+                    <td>
+                       <h3>WED 18:30-19:00 GMT+6 - SHORT BREAK</h3>
+                    </td>
+		    <hr>	   
+                  </tr>               
+                  <tr>
+                    <td>
+                      <h3>WED 19:00-20:30 GMT+6 - <a style="color:#B40431;">Session 4: <a> (Chair: TBA)</h3>
+			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+                         <a class="link"
+			    style="color:#B40431;"
+                            href=""></a>
+                         The session video recording will be linked from here.
+                      <ul class="text">
+                        <li><strong><a style="color:#B40431;"></a><br>
+				a</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+			</li>
+			<br>
+			<li><strong><a style="color:#B40431;"></a><br>
+			        </strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+	                 </li>
+			<br>
+			<li><strong><a style="color:#B40431;"></a><br>
+			        </strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+	                 </li>								       										       
+                      </ul>
+                    </td>
+		    <hr>			    
+                  </tr>
+
+<hr size="1">
+<a name="WED"></a>
+<h2 style="color:#B40431;">Wednesday, 8 September 2021</h2>
+<hr size="1">
+                  <tr>
+                    <td>
+		       <a name="OPENING"></a>
+			    <h3>WED 13:15-13:30 GMT+6- <a style="color:#B40431;">OPENING</a></h3>
+			       <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			         See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong>
+		               </p>
+                    </td>
+		    <hr>
+                   </tr>
+                   <tr>
+                    <td>
+		       <a name="SESSION-2"></a>
+                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): KIM LARSEN</a>
+			    (Chair: Peter Csaba Olveczky)</h3>
+			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
+                         <ul>
+                           <li><strong><a style="color:#B40431;">Model Checking and Machine Learning Joining Forces<a></strong></li>
+                         </ul>
+			 <p class="text">
+                           <a class="link"
+			      style="color:#B40431;"
+                              href="keynotes.html#KIM">Abstract and Speaker's Biography</a> |
+                           The session video recording will be linked from here.</p>
+                      </p>
+                    </td>
+                    <hr>
+                   </tr>
+                   <tr>
+                    <td>
+                       <h3>WED 14:30-15:00 GMT+6 - SHORT BREAK</h3>
+                    </td>
+		    <hr>	   
+                  </tr>               
+                 <tr>
+                    <td>
+                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 2: EFFICIENT MODEL-CHECKING METHODS<a> (Chair: TBA)</h3>
+			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+                         <a class="link"
+			    style="color:#B40431;"
+                            href=""></a>
+                         The session video recording will be linked from here.
+                      <ul class="text">
+                        <li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
+				Yati Phyo, Canh Do Minh and Kazuhiro Ogata</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+			</li>
+			<br>
+			<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
+			        Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+	                 </li>
+			<br>
+			<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
+			        Rick Erkens and Jan Friso Groote</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+	                 </li>								       										       
+                      </ul>
+                    </td>
+		    <hr>			    
+                  </tr>
+                  <tr>
+                    <td>
+                       <h3>WED 16:30-17:30 GMT+6 - LONG BREAK</h3>
+                    </td>
+		    <hr>	   
+                  </tr>               
+                  <tr>
+                    <td>
+                      <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 3: <a> (Chair: TBA)</h3>
+			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+                         <a class="link"
+			    style="color:#B40431;"
+                            href=""></a>
+                         The session video recording will be linked from here.
+                      <ul class="text">
+                        <li><strong><a style="color:#B40431;"></a><br>
+				</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+			</li>
+			<br>
+			<li><strong><a style="color:#B40431;"></a><br>
+			        </strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+	                 </li>
+                      </ul>
+                    </td>
+		    <hr>			    
+                  </tr>
+                  <tr>
+                    <td>
+                       <h3>WED 18:30-19:00 GMT+6 - SHORT BREAK</h3>
+                    </td>
+		    <hr>	   
+                  </tr>               
+                  <tr>
+                    <td>
+                      <h3>WED 19:00-20:30 GMT+6 - <a style="color:#B40431;">Session 4: <a> (Chair: TBA)</h3>
+			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+                         <a class="link"
+			    style="color:#B40431;"
+                            href=""></a>
+                         The session video recording will be linked from here.
+                      <ul class="text">
+                        <li><strong><a style="color:#B40431;"></a><br>
+				a</strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+			</li>
+			<br>
+			<li><strong><a style="color:#B40431;"></a><br>
+			        </strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+	                 </li>
+			<br>
+			<li><strong><a style="color:#B40431;"></a><br>
+			        </strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+	                 </li>								       										       
+                      </ul>
+                    </td>
+		    <hr>			    
+                  </tr>			    
                   <tr>
                     <td>
 		       <a name="CLOSING"></a>
