--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -295,7 +295,7 @@
                          The session video recording will be linked from here.
                       <ul class="text">
                         <li><strong><a style="color:#B40431;"></a><br>
-				a</strong>
+				</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
@@ -368,22 +368,22 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
-				Yati Phyo, Canh Do Minh and Kazuhiro Ogata</strong>
+                        <li><strong><a style="color:#B40431;"></a><br>
+				</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
-			        Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong>
+			<li><strong><a style="color:#B40431;"></a><br>
+			        </strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 	                 </li>
 			<br>
-			<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
-			        Rick Erkens and Jan Friso Groote</strong>
+			<li><strong><a style="color:#B40431;"></a><br>
+			        </strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
@@ -442,7 +442,7 @@
                          The session video recording will be linked from here.
                       <ul class="text">
                         <li><strong><a style="color:#B40431;"></a><br>
-				a</strong>
+				</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
@@ -515,22 +515,22 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
-				Yati Phyo, Canh Do Minh and Kazuhiro Ogata</strong>
+                        <li><strong><a style="color:#B40431;"></a><br>
+				</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
-			        Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong>
+			<li><strong><a style="color:#B40431;"></a><br>
+			        </strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 	                 </li>
 			<br>
-			<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
-			        Rick Erkens and Jan Friso Groote</strong>
+			<li><strong><a style="color:#B40431;"></a><br>
+			        e</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
@@ -589,7 +589,7 @@
                          The session video recording will be linked from here.
                       <ul class="text">
                         <li><strong><a style="color:#B40431;"></a><br>
-				a</strong>
+				</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
