--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -123,12 +123,13 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#WED";>8 September</a></strong></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-2">2. EFFICIENT MODEL-CHECKING METHODS</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-1">1. KIM LARSEN'S KEYNOTE TALK</a></strong></td>
     <td><strong>90 min.</strong></td>  
     <td><strong>1:30</strong></td>
     <td><strong>2:30</strong></td>
     <td><strong>3:30</strong></td>
     <td><strong>4:30</strong></td>
+	  
     <td><strong>7:30</strong></td>
     <td><strong>8:30</strong></td>
     <td><strong>9:30</strong></td>
@@ -144,6 +145,54 @@
     <td><strong>17:00</strong></td>
     <td><strong>17:30</strong></td>
     <td><strong>19:30</strong></td>
+  </tr>
+  <tr align = "left">
+    <td style="border-top:none;border-bottom:none;"></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-2">2. EFFICIENT MODEL-CHECKING METHODS</a></strong></td>
+    <td><strong>60 min.</strong></td>  
+    <td><strong>3:00</strong></td>
+    <td><strong>4:00</strong></td>
+    <td><strong>5:00</strong></td>
+    <td><strong>6:00</strong></td>
+    <td><strong>9:00</strong></td>
+    <td><strong>10:00</strong></td>
+    <td><strong>11:00</strong></td>
+    <td><strong>12:00</strong></td>
+    <td><strong>13:00</strong></td>
+    <td><strong>13:30</strong></td>	  
+    <td><strong>14:00</strong></td>
+    <td><strong>14:30</strong></td>
+    <td><strong>15:00</strong></td>
+    <td><strong>16:00</strong></td>
+    <td><strong>17:00</strong></td>  
+    <td><strong>18:00</strong></td>
+    <td><strong>18:30</strong></td>
+    <td><strong>20:00</strong></td>
+    <td><strong>21:00</strong></td>
+  </tr>
+  <tr align = "left">
+    <td style="border-top:none;border-bottom:none;"></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-3">3. DATABASE AND DISTRIBUTED TRANSACTIONS</a></strong></td>
+    <td><strong>60 min.</strong></td>  
+    <td><strong>3:00</strong></td>
+    <td><strong>4:00</strong></td>
+    <td><strong>5:00</strong></td>
+    <td><strong>6:00</strong></td>
+    <td><strong>9:00</strong></td>
+    <td><strong>10:00</strong></td>
+    <td><strong>11:00</strong></td>
+    <td><strong>12:00</strong></td>
+    <td><strong>13:00</strong></td>
+    <td><strong>13:30</strong></td>	  
+    <td><strong>14:00</strong></td>
+    <td><strong>14:30</strong></td>
+    <td><strong>15:00</strong></td>
+    <td><strong>16:00</strong></td>
+    <td><strong>17:00</strong></td>  
+    <td><strong>18:00</strong></td>
+    <td><strong>18:30</strong></td>
+    <td><strong>20:00</strong></td>
+    <td><strong>21:00</strong></td>
   </tr>
 </table>
 <h3 style="color:#B40431;">Time zones:</h3>
@@ -468,7 +517,7 @@
 
 <hr size="1">
 <a name="FRI"></a>
-<h2 style="color:#B40431;">FRI, 10 September 2021</h2>
+<h2 style="color:#B40431;">Friday, 10 September 2021</h2>
 <hr size="1">
                   <tr>
                     <td>
