--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -123,7 +123,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#WED";>8 September</a></strong></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-1">1. KIM LARSEN'S KEYNOTE TALK</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-1">1. Kim Larsen's Keynote Talk</a></strong></td>
     <td><strong>60 min.</strong></td>  
     <td><strong>1:30</strong></td>
     <td><strong>2:30</strong></td>
@@ -147,7 +147,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-2">2. EFFICIENT MODEL-CHECKING METHODS</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-2">2. Efficient Model Checking Methods</a></strong></td>
     <td><strong>90 min.</strong></td>  
     <td><strong>3:00</strong></td>
     <td><strong>4:00</strong></td>
@@ -171,7 +171,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-3">3. DATABASE AND DISTRIBUTED TRANSACTIONS</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-3">3. Database and Distributed Transactions</a></strong></td>
     <td><strong>60 min.</strong></td>  
     <td><strong>4:30</strong></td>
     <td><strong>5:30</strong></td>
@@ -261,8 +261,8 @@
                    <tr>
                     <td>
 		       <a name="SESSION-2"></a>
-                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): KIM LARSEN</a>
-			    (Chair: Peter Csaba Olveczky)</h3>
+                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): Kim Larsen</a>
+			    (Chair: Peter Csaba &Ouml;lveczky)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <ul>
@@ -285,9 +285,9 @@
                   </tr>               
                  <tr>
                     <td>
-                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 2: EFFICIENT MODEL-CHECKING METHODS<a> (Chair: TBA)</h3>
+                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 2: Efficient Model Checking Methods<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
@@ -325,28 +325,28 @@
                   </tr>               
                   <tr>
                     <td>
-                      <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 3: <a> (Chair: TBA)</h3>
+                      <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 3: Database and Distributed Transactions<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;"></a><br>
-				</strong>
+                        <li><strong><a style="color:#B40431;">Some Aspects of the Database Resilience</a><br>
+				Luis Bustamante and Ana Teresa Martins</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
-			        </strong>
+			<li><strong><a style="color:#B40431;">On the Correctness Problem for Serializability</a><br>
+			        J&uuml;rgen König and Heike Wehrheim</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
-	                 </li>
-                      </ul>
+	                </li>
+		      </ul>
                     </td>
 		    <hr>			    
                   </tr>
@@ -358,9 +358,9 @@
                   </tr>               
                   <tr>
                     <td>
-                      <h3>WED 19:00-20:30 GMT+6 - <a style="color:#B40431;">Session 4: <a> (Chair: TBA)</h3>
+                      <h3>WED 19:00-20:30 GMT+6 - <a style="color:#B40431;">Session 4: Formalization and Verification in Coq and Isabelle<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
@@ -408,7 +408,7 @@
                    <tr>
                     <td>
 		       <a name="SESSION-2"></a>
-                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): KIM LARSEN</a>
+                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): </a>
 			    (Chair: Peter Csaba Olveczky)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
@@ -432,9 +432,9 @@
                   </tr>               
                  <tr>
                     <td>
-                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 2: EFFICIENT MODEL-CHECKING METHODS<a> (Chair: TBA)</h3>
+                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 2: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
@@ -474,7 +474,7 @@
                     <td>
                       <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 3: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
@@ -555,7 +555,7 @@
                    <tr>
                     <td>
 		       <a name="SESSION-2"></a>
-                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): KIM LARSEN</a>
+                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): </a>
 			    (Chair: Peter Csaba Olveczky)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
@@ -579,7 +579,7 @@
                   </tr>               
                  <tr>
                     <td>
-                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 2: EFFICIENT MODEL-CHECKING METHODS<a> (Chair: TBA)</h3>
+                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 2: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
