--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -244,7 +244,7 @@
 <br>	
 
 <a name="DETAILED"></a><h2 style="color:#B40431;">DETAILED PROGRAMME</h2>
-
+<hr>
 <hr size="1">
 <a name="WED"></a>
 <h2 style="color:#B40431;">Wednesday, 8 September 2021</h2>
@@ -294,21 +294,24 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
+			<li><a name="PAPER-15"></a>
+			    <strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
 				Yati Phyo, Canh Do Minh and Kazuhiro Ogata</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
+			<li><a name="PAPER-29"></a>
+			    <strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
 			        Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 	                 </li>
 			<br>
-			<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
+			<li><a name="PAPER-16"></a>
+			    <strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
 			        Rick Erkens and Jan Friso Groote</strong>
                           <a class="link"
 			     style="color:#B40431;"
@@ -334,14 +337,16 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;">Some Aspects of the Database Resilience</a><br>
+                        <li><a name="PAPER-47"></a>
+			    <strong><a style="color:#B40431;">Some Aspects of the Database Resilience</a><br>
 				Luis Bustamante and Ana Teresa Martins</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><strong><a style="color:#B40431;">On the Correctness Problem for Serializability</a><br>
+			<li><a name="PAPER-6"></a>
+			    <strong><a style="color:#B40431;">On the Correctness Problem for Serializability</a><br>
 			        J&uuml;rgen König and Heike Wehrheim</strong>
                           <a class="link"
 			     style="color:#B40431;"
@@ -367,21 +372,24 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;"></a><br>
+                        <li><a name="PAPER-39"></a>
+			    <strong><a style="color:#B40431;"></a><br>
 				</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
+			<li><a name="PAPER-22"></a>
+			    <strong><a style="color:#B40431;"></a><br>
 			        </strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 	                 </li>
 			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
+			<li><a name="PAPER-9"></a>
+			    <strong><a style="color:#B40431;"></a><br>
 			        </strong>
                           <a class="link"
 			     style="color:#B40431;"
@@ -724,8 +732,9 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
     Julia Eisentraut, Stephan Holzer, Katharina Klioba, Jan Kretinsky, Lukas Pin and Alexander Wagner
     </strong>
 	</li>
-	<li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
-    Yati Phyo, Canh Do Minh and Kazuhiro Ogata
+	<li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a>
+		[<a class="link" style="color:#B40431;" href="#PAPER-15">presentation schedule</a><br>
+                Yati Phyo, Canh Do Minh and Kazuhiro Ogata
     </strong>
 	</li>
 	<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
