--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -733,8 +733,8 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
     </strong>
 	</li>
 	<li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a>
-		[<a class="link" style="color:#B40431;" href="#PAPER-15">presentation schedule</a><br>
-                Yati Phyo, Canh Do Minh and Kazuhiro Ogata
+		[<a class="link" href="#PAPER-15">presentation schedule</a>]<br>
+                Yati Phyo, Canh Do Minh and Kazuhiro Ogata		
     </strong>
 	</li>
 	<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
