--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -261,7 +261,7 @@
                    </tr>
                    <tr>
                     <td>
-		       <a name="SESSION-2"></a>
+		       <a name="SESSION-1"></a>
                        <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): Kim Larsen</a>
 			    (Chair: Peter Csaba &Ouml;lveczky)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
@@ -286,6 +286,7 @@
                   </tr>               
                  <tr>
                     <td>
+		      <a name="SESSION-2"></a><a name="PAPER-15"></a><a name="PAPER-29"></a><a name="PAPER-16"></a>
                       <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 2: Efficient Model Checking Methods<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
@@ -294,24 +295,21 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-			<li><a name="PAPER-15"></a>
-			    <strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
+			<li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
 				Yati Phyo, Canh Do Minh and Kazuhiro Ogata</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><a name="PAPER-29"></a>
-			    <strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
+			<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
 			        Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 	                 </li>
 			<br>
-			<li><a name="PAPER-16"></a>
-			    <strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
+			<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
 			        Rick Erkens and Jan Friso Groote</strong>
                           <a class="link"
 			     style="color:#B40431;"
@@ -329,6 +327,7 @@
                   </tr>               
                   <tr>
                     <td>
+		      <a name="SESSION-3"></a><a name="PAPER-47"></a><a name="PAPER-6"></a>
                       <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 3: Database and Distributed Transactions<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
@@ -337,16 +336,14 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><a name="PAPER-47"></a>
-			    <strong><a style="color:#B40431;">Some Aspects of the Database Resilience</a><br>
+                        <li><strong><a style="color:#B40431;">Some Aspects of the Database Resilience</a><br>
 				Luis Bustamante and Ana Teresa Martins</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><a name="PAPER-6"></a>
-			    <strong><a style="color:#B40431;">On the Correctness Problem for Serializability</a><br>
+			<li><strong><a style="color:#B40431;">On the Correctness Problem for Serializability</a><br>
 			        J&uuml;rgen König and Heike Wehrheim</strong>
                           <a class="link"
 			     style="color:#B40431;"
@@ -364,6 +361,7 @@
                   </tr>               
                   <tr>
                     <td>
+		      <a name="SESSION-4"></a><a name="PAPER-39"></a><a name="PAPER-22"></a><a name="PAPER-9"></a>
                       <h3>WED 19:00-20:30 GMT+6 - <a style="color:#B40431;">Session 4: Formalization and Verification in Coq and Isabelle<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
@@ -372,24 +370,21 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><a name="PAPER-39"></a>
-			    <strong><a style="color:#B40431;"></a><br>
+                        <li><strong><a style="color:#B40431;"></a><br>
 				</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><a name="PAPER-22"></a>
-			    <strong><a style="color:#B40431;"></a><br>
+			<li><strong><a style="color:#B40431;"></a><br>
 			        </strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 	                 </li>
 			<br>
-			<li><a name="PAPER-9"></a>
-			    <strong><a style="color:#B40431;"></a><br>
+			<li><strong><a style="color:#B40431;"></a><br>
 			        </strong>
                           <a class="link"
 			     style="color:#B40431;"
@@ -733,12 +728,15 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
     </strong>
 	</li>
 	<li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a>
-		[<a class="link" href="#PAPER-15">presentation schedule</a>]<br>
+		[<a class="link" href="#PAPER-15">presentation schedule</a>]
+		<br>
                 Yati Phyo, Canh Do Minh and Kazuhiro Ogata		
     </strong>
 	</li>
-	<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a><br>
-    Rick Erkens and Jan Friso Groote
+	<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a>
+		[<a class="link" href="#PAPER-16">presentation schedule</a>]<br>
+		<br>
+		Rick Erkens and Jan Friso Groote
     </strong>
 	</li>
 	<li><strong><a style="color:#B40431;">Normalising Lustre Preserves Security</a><br>
@@ -753,8 +751,10 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
     Alejandro Díaz-Caro and Gilles Dowek
     </strong>
 	</li>
-	<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
-    Muhammad Hannan Khan, Osman Hasan and Shahid Khan
+	<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a>
+		[<a class="link" href="#PAPER-29">presentation schedule</a>]<br>
+		<br>
+		Muhammad Hannan Khan, Osman Hasan and Shahid Khan
     </strong>
 	</li>
 	<li><strong><a style="color:#B40431;">AlCons: Deductive Synthesis of Sorting Algorithms in Theorema</a><br>
