--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -715,9 +715,12 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
     Emmanuel Hainry, Emmanuel Jeandel, Romain Péchoux and Olivier Zeyen
     </strong>
 	</li>
-	<li><strong><a style="color:#B40431;">On the Correctness Problem for Serializability</a><br>
-    Jürgen König and Heike Wehrheim
-    </strong>
+	<li><strong><a style="color:#B40431;">On the Correctness Problem for Serializability</a>
+		[<a class="link" href="#PAPER-6">presentation schedule</a>]
+		<br>
+		Jürgen König and Heike Wehrheim
+            </strong>
+            <br>
 	</li>
 	<li><strong><a style="color:#B40431;">A Complete Semantics of K and Its Translation to Isabelle</a><br>
     Liyi Li and Elsa Gunter
@@ -731,13 +734,15 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 		[<a class="link" href="#PAPER-15">presentation schedule</a>]
 		<br>
                 Yati Phyo, Canh Do Minh and Kazuhiro Ogata		
-    </strong>
+             </strong>
+	     <br>
 	</li>
 	<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a>
-		[<a class="link" href="#PAPER-16">presentation schedule</a>]<br>
+		[<a class="link" href="#PAPER-16">presentation schedule</a>]
 		<br>
 		Rick Erkens and Jan Friso Groote
-    </strong>
+             </strong>
+             <br>
 	</li>
 	<li><strong><a style="color:#B40431;">Normalising Lustre Preserves Security</a><br>
     Sanjiva Prasad and Rathnakar Madhukar Yerraguntla
@@ -752,10 +757,11 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
     </strong>
 	</li>
 	<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a>
-		[<a class="link" href="#PAPER-29">presentation schedule</a>]<br>
+		[<a class="link" href="#PAPER-29">presentation schedule</a>]
 		<br>
 		Muhammad Hannan Khan, Osman Hasan and Shahid Khan
-    </strong>
+            </strong>
+	    <br>
 	</li>
 	<li><strong><a style="color:#B40431;">AlCons: Deductive Synthesis of Sorting Algorithms in Theorema</a><br>
     Isabela Dramnesc and Tudor Jebelean
@@ -769,9 +775,12 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
     Michele Pasqua and Marino Miculan
     </strong>
 	</li>
-	<li><strong><a style="color:#B40431;">Some Aspects of the Database Resilience</a><br>
-    Luis Bustamante and Ana Teresa Martins
-    </strong>
+	<li><strong><a style="color:#B40431;">Some Aspects of the Database Resilience</a>
+		[<a class="link" href="#PAPER-47">presentation schedule</a>]
+		<br>
+		Luis Bustamante and Ana Teresa Martins
+            </strong>
+	    <br>
 	</li>
 	<li><strong><a style="color:#B40431;">A Proof Method for Local Sufficient Completeness of Term Rewriting Systems</a><br>
     Tomoki Shiraishi, Kentaro Kikuchi and Takahito Aoto
