--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -722,9 +722,12 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
             </strong>
             <br>
 	</li>
-	<li><strong><a style="color:#B40431;">A Complete Semantics of K and Its Translation to Isabelle</a><br>
-    Liyi Li and Elsa Gunter
-    </strong>
+	<li><strong><a style="color:#B40431;">A Complete Semantics of K and Its Translation to Isabelle</a>
+		[<a class="link" href="#PAPER-9">presentation schedule</a>]
+		<br>
+		Liyi Li and Elsa Gunter
+            </strong>
+	    <br>
 	</li>
 	<li><strong><a style="color:#B40431;">Assessing Security of Crypto-Currencies with Attack-Defense Trees: Proof of Concept and Future Directions</a><br>
     Julia Eisentraut, Stephan Holzer, Katharina Klioba, Jan Kretinsky, Lukas Pin and Alexander Wagner
@@ -748,9 +751,12 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
     Sanjiva Prasad and Rathnakar Madhukar Yerraguntla
     </strong>
 	</li>
-	<li><strong><a style="color:#B40431;">Certifying Choreography Compilation</a><br>
-    Luís Cruz-Filipe, Fabrizio Montesi and Marco Peressotti
-    </strong>
+	<li><strong><a style="color:#B40431;">Certifying Choreography Compilation</a>
+		[<a class="link" href="#PAPER-22">presentation schedule</a>]
+		<br>
+		Luís Cruz-Filipe, Fabrizio Montesi and Marco Peressotti
+            </strong>
+	    <br>
 	</li>
 	<li><strong><a style="color:#B40431;">A New Connective in Natural Deduction, and its Application to Quantum Computing</a><br>
     Alejandro Díaz-Caro and Gilles Dowek
@@ -767,9 +773,12 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
     Isabela Dramnesc and Tudor Jebelean
     </strong>
 	</li>
-	<li><strong><a style="color:#B40431;">A Mechanically Verified Theory of Contracts</a><br>
-    Stéphane Kastenbaum, Benoît Boyer and Jean-Pierre Talpin
-    </strong>
+	<li><strong><a style="color:#B40431;">A Mechanically Verified Theory of Contracts</a>
+		[<a class="link" href="#PAPER-39">presentation schedule</a>]
+		<br>
+		Stéphane Kastenbaum, Benoît Boyer and Jean-Pierre Talpin
+             </strong>
+	     <br>
 	</li>
 	<li><strong><a style="color:#B40431;">A Calculus for Attribute-based Memory Updates</a><br>
     Michele Pasqua and Marino Miculan
