--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -720,7 +720,7 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 		<br>
 		Jürgen König and Heike Wehrheim
             </strong>
-            <br>
+            &nbsp;<br>
 	</li>
 	<li><strong><a style="color:#B40431;">A Complete Semantics of K and Its Translation to Isabelle</a>
 		[<a class="link" href="#PAPER-9">presentation schedule</a>]
