--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -718,9 +718,9 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 	<li><strong><a style="color:#B40431;">On the Correctness Problem for Serializability</a>
 		[<a class="link" href="#PAPER-6">presentation schedule</a>]
 		<br>
-		Jürgen König and Heike Wehrheim
+		J&uuml;rgen König and Heike Wehrheim
             </strong>
-            &nbsp;<br>
+            &nbsp;<br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">A Complete Semantics of K and Its Translation to Isabelle</a>
 		[<a class="link" href="#PAPER-9">presentation schedule</a>]
