--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -716,11 +716,11 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
     </strong>
 	</li>
 	<li><strong><a style="color:#B40431;">On the Correctness Problem for Serializability</a>
-		[<a class="link" href="#PAPER-6">presentation schedule</a>]
 		<br>
 		J&uuml;rgen König and Heike Wehrheim
             </strong>
-            &nbsp;<br>&nbsp;
+	    [<a class="link"  style="color:#B40431;" href="#PAPER-6">presentation schedule</a>]
+            <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">A Complete Semantics of K and Its Translation to Isabelle</a>
 		[<a class="link" href="#PAPER-9">presentation schedule</a>]
