--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -704,12 +704,17 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 </p>
 <ul>
 	<li><strong><a style="color:#B40431;">Card-based Cryptographic Protocols with a Standard Deck of Cards Using Private Operations</a><br>
-    Yoshifumi Manabe and Hibiki Ono
-    </strong>
+		Yoshifumi Manabe and Hibiki Ono
+            </strong>
+	    <br>[<a class="link" style="color:#B40431;" href="#PAPER-">presentation schedule</a>]
+            <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">Learning Probabilistic Automata using Residuals</a><br>
-    Wenjing Chu, Shuo Chen and Marcello Bonsangue
-    </strong>
+		Wenjing Chu, Shuo Chen and Marcello Bonsangue
+	    </strong>
+	    <br>
+	    [<a class="link" style="color:#B40431;" href="#PAPER-">presentation schedule</a>]
+            <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">ComplexityParser: an automatic tool for certifying poly-time complexity of Java programs</a><br>
     Emmanuel Hainry, Emmanuel Jeandel, Romain Péchoux and Olivier Zeyen
@@ -719,7 +724,8 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 		<br>
 		J&uuml;rgen König and Heike Wehrheim
             </strong>
-	    [<a class="link"  style="color:#B40431;" href="#PAPER-6">presentation schedule</a>]
+	    <br>
+	    [<a class="link" style="color:#B40431;" href="#PAPER-6">presentation schedule</a>]
             <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">A Complete Semantics of K and Its Translation to Isabelle</a>
@@ -728,68 +734,80 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 		Liyi Li and Elsa Gunter
             </strong>
 	    <br>
+	    [<a class="link" style="color:#B40431;" href="#PAPER-6">presentation schedule</a>]
+            <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">Assessing Security of Crypto-Currencies with Attack-Defense Trees: Proof of Concept and Future Directions</a><br>
     Julia Eisentraut, Stephan Holzer, Katharina Klioba, Jan Kretinsky, Lukas Pin and Alexander Wagner
     </strong>
 	</li>
 	<li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a>
-		[<a class="link" href="#PAPER-15">presentation schedule</a>]
 		<br>
-                Yati Phyo, Canh Do Minh and Kazuhiro Ogata		
+                Yati Phyo, Canh Do Minh and Kazuhiro Ogata
              </strong>
 	     <br>
+	     [<a class="link" style="color:#B40431;" href="#PAPER-15">presentation schedule</a>]
+             <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">A Set Automaton to Locate All Pattern Matches in a Term</a>
-		[<a class="link" href="#PAPER-16">presentation schedule</a>]
 		<br>
 		Rick Erkens and Jan Friso Groote
              </strong>
              <br>
+	     [<a class="link" style="color:#B40431;" href="#PAPER-16">presentation schedule</a>]
+             <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">Normalising Lustre Preserves Security</a><br>
     Sanjiva Prasad and Rathnakar Madhukar Yerraguntla
     </strong>
 	</li>
 	<li><strong><a style="color:#B40431;">Certifying Choreography Compilation</a>
-		[<a class="link" href="#PAPER-22">presentation schedule</a>]
 		<br>
 		Luís Cruz-Filipe, Fabrizio Montesi and Marco Peressotti
             </strong>
 	    <br>
+	    [<a class="link" style="color:#B40431;" href="#PAPER-22">presentation schedule</a>]
+            <br>&nbsp;
 	</li>
-	<li><strong><a style="color:#B40431;">A New Connective in Natural Deduction, and its Application to Quantum Computing</a><br>
-    Alejandro Díaz-Caro and Gilles Dowek
-    </strong>
+	<li><strong><a style="color:#B40431;">A New Connective in Natural Deduction, and its Application to Quantum Computing</a>
+		<br>
+                Alejandro Díaz-Caro and Gilles Dowek
+             </strong>
+	     <br>
+	     [<a class="link" style="color:#B40431;" href="#PAPER-">presentation schedule</a>]
+	     <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a>
-		[<a class="link" href="#PAPER-29">presentation schedule</a>]
 		<br>
 		Muhammad Hannan Khan, Osman Hasan and Shahid Khan
             </strong>
 	    <br>
+	    [<a class="link" style="color:#B40431;" href="#PAPER-29">presentation schedule</a>]
+	     <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">AlCons: Deductive Synthesis of Sorting Algorithms in Theorema</a><br>
     Isabela Dramnesc and Tudor Jebelean
     </strong>
 	</li>
 	<li><strong><a style="color:#B40431;">A Mechanically Verified Theory of Contracts</a>
-		[<a class="link" href="#PAPER-39">presentation schedule</a>]
+		[<a class="link" style="color:#B40431;" href="#PAPER-39">presentation schedule</a>]
 		<br>
 		Stéphane Kastenbaum, Benoît Boyer and Jean-Pierre Talpin
              </strong>
 	     <br>
+	     <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">A Calculus for Attribute-based Memory Updates</a><br>
     Michele Pasqua and Marino Miculan
     </strong>
 	</li>
 	<li><strong><a style="color:#B40431;">Some Aspects of the Database Resilience</a>
-		[<a class="link" href="#PAPER-47">presentation schedule</a>]
 		<br>
 		Luis Bustamante and Ana Teresa Martins
             </strong>
 	    <br>
+	    [<a class="link" style="color:#B40431;" href="#PAPER-47">presentation schedule</a>]
+	    <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">A Proof Method for Local Sufficient Completeness of Term Rewriting Systems</a><br>
     Tomoki Shiraishi, Kentaro Kikuchi and Takahito Aoto
